@@ -47,6 +47,10 @@
 	<LI>Remote URLs didn't always resolve properly (like the
 	images from the Google web page...)
 
+	<LI>The font width loading code didn't force the
+	non-breaking space to have the same width as a regular
+	space.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.18</H2>
