@@ -24,5 +24,11 @@
 <P>Normal<SUP>Superscript</SUP>
 <P>Normal<SUB>Subscript</SUB>
 
+<H1>Non-Breaking Space Test</H1>
+
+<P>The investment objectives which best describe this
+portfolio:&nbsp;&nbsp;<u>Maximum Growth</u>: maximum capital
+appreciation with higher risk/volatility and no income.
+
 </BODY>
 </HTML>
